# FastAPI-Service

./: .cnb.yml  .cz.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .ruff.toml  CHANGELOG.md  README.md  VERSION.md  alembic.ini  commit.sh  cz.toml  main.py  pyproject.toml  requirements.txt  ruff.toml  skills-lock.json
.agents/skills/create-model-schema/: SKILL.md  examples.md  reference.md
.agents/skills/create-model-schema/scripts/: check-model-fk.py
.agents/skills/create-model-schema/templates/: model_template.py  schema_template.py
.github/: copilot-instructions.md  release-please-config.json
.github/chatmodes/: architecture-validation.md  code-review.md  python-dev.md
.github/prompts/: code-logic.md  comments.md  data-validation.md  documentation.md  error-handling.md  performance.md
.github/workflows/: release-please.yml  release.yml
backend/: CHANGELOG.md  __init__.py  main.py
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 2025-12-17-16_34_37-204745561d1e_新增_sysuser_表.py  2025-12-18-10_41_07-29a20b69a879_新增角色表_用户角色关联表.py  2025-12-18-13_35_16-6e3c3f509739_新增菜单表_角色菜单关联表.py
backend/app/: router.py
backend/app/admin/api/: router.py
backend/app/admin/api/auth/: __init__.py  auth.py
backend/app/admin/api/log/: __init__.py  sys_login_log.py  sys_operation_log.py
backend/app/admin/api/monitor/: __init__.py  health.py
backend/app/admin/api/sys/: __init__.py  dept.py  menu.py  role.py  user.py
backend/app/admin/api/v1/auth/: __init__.py  auth.py  captcha.py
backend/app/admin/api/v1/log/: __init__.py  login.py  operation.py
backend/app/admin/api/v1/sys/: __init__.py  user.py
backend/app/admin/core/: config.py
backend/app/admin/crud/: __init__.py  login_log.py  operation_log.py  sys_dept.py  sys_login_log.py  sys_menu.py  sys_operation_log.py  sys_role.py  sys_user.py  user.py
backend/app/admin/model/: __init__.py  dept.py  login_log.py  m2m.py  menu.py  operation_log.py  role.py  sys_admin.py  sys_data_rule.py  sys_dept.py  sys_login_log.py  sys_menu.py  sys_operation_log.py  sys_request_log.py  sys_role.py  sys_user.py  user.py  user_social.py
backend/app/admin/schema/: __init__.py  auth.py  captcha.py  dept.py  login.py  login_log.py  menu.py  operation_log.py  role.py  sys_admin.py  sys_data_rule.py  sys_dept.py  sys_login_log.py  sys_menu.py  sys_operation_log.py  sys_request_log.py  sys_role.py  sys_user.py  token.py  user.py  user_social.py
backend/app/admin/service/: __init__.py  auth.py  captcha.py  login_log.py  operation_log.py  sys_dept.py  sys_login_log.py  sys_menu.py  sys_operation_log.py  sys_role.py  sys_user.py  user.py
backend/common/: dataclasses.py  log.py  logger.py  model.py  pagination.py  queue.py  schema.py
backend/common/enum/: __init__.py  base.py  custom.py  dict.py
backend/common/exception/: __init__.py  error.py  errors.py  handler.py  message.py
backend/common/request/: __init__.py  context.py  limit.py  parse.py  query.py  trace_id.py
backend/common/response/: __init__.py  base.py  check.py  code.py
backend/common/schema/: __init__.py
backend/common/schema/type/: __init__.py  func.py
backend/common/security/: jwt.py  password.py  permission.py  rbac.py
backend/common/socketio/: actions.py  server.py
backend/core/: config.py  path.py  paths.py  register.py  registrar.py  settings.py
backend/database/: __init__.py  init_data.py  mysql.py  postgresql.py  redis.py
backend/middleware/: __init__.py  access.py  jwt.py  operation.py  operation_log.py  request_log.py  state.py
backend/tests/: test_encrypt.py
backend/utils/: __init__.py  check.py  encrypt.py  module.py  openapi.py  openapi_patch.py  project.py  regex.py  regexp_verify.py  route.py  serializers.py  timezone.py  tool.py  tools.py  tree.py
backend/utils/validator/: __init__.py  minixs.py  regex.py  types.py  validators.py
deploy/: Dockerfile  Jenkinsfile  README.md
env/: .env  .env.development  .env.production  .env.test
