[project]
name = "fastapi-service"
version = "0.9.0"
description = "FastAPI Service"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    # Web / API
    "fastapi[standard-no-fastapi-cloud-cli]>=0.121.1",
    "fastapi-pagination>=0.15.0",                      # 分页工具
    "fastapi-limiter>=0.1.6",                          # 基于 Redis 的限流
    "python-socketio>=5.14.3",                         # Socket.IO（实时通信，ASGI 可集成）
    "asgiref>=3.10.0",                                 # ASGI 工具（同步<->异步适配等）
    "starlette-context>=0.4.0",                        # 中间件扩展，请求上下文

    # Web 服务器（ASGI）
    "granian>=2.5.7",

    # 任务队列 & 监控 & Redis
    "celery>=5.5.3",
    "flower>=2.0.1",         # Celery 监控面板
    "redis[hiredis]>=7.0.1", # 被 fastapi-limiter / Celery 等使用

    # 数据库 / ORM / 迁移
    "sqlalchemy[asyncio]>=2.0.44",  # ORM/SQL 工具
    "alembic>=1.17.1",              # 迁移工具
    "sqlalchemy-crud-plus>=1.13.1", # SQLAlchemy CRUD 辅助封装
    "asyncpg>=0.30.0",              # PostgreSQL 异步驱动

    # 数据模型 / 配置 / 序列化
    "pydantic>=2.12.4",          # 数据模型&校验
    "pydantic-settings>=2.12.0", # 配置管理
    "msgspec>=0.19.0",           # 高性能编解码/校验
    "rtoml>=0.13.0",             # TOML 解析

    # 安全 / 鉴权
    "pwdlib[bcrypt]>=0.3.0", # 密码哈希/验证
    "cryptography>=46.0.3",
    "python-jose>=3.5.0",    # JWT/JWS/JWE（依赖 cryptography）
    "itsdangerous>=2.2.0",   # 简单签名/令牌（链接签名/一次性令牌等）
    "fast-captcha>=0.3.2",   # 验证码生成

    # 运维 / 工具
    "user-agents>=2.2.0",  # 解析客户端设备信息
    "loguru>=0.7.3",       # 日志
    "psutil>=7.1.3",       # 进程/系统指标
    "py-ip2region>=3.0.2", # IP 地址归属地查询
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
    "commitizen>=4.10.0",
]

[tool.uv]
package = false
python-downloads = "manual"
default-groups = ["dev"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[tool.setuptools]
packages = ["backend"]
