[project]
name = "fastapi-service"
description = "基于 FastAPI, SQLAlchemy 的服务框架"
readme = "README.md"
dynamic = ["version"]
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asgiref>=3.11.1",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.5",
    "fastapi>=0.129.0",
    "fastapi-pagination>=0.15.10",
    "granian[reload]>=2.7.1",
    "loguru>=0.7.3",
    "msgspec>=0.20.0",
    "pwdlib[bcrypt]>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyrate-limiter>=4.0.2",
    "python-jose>=3.5.0",
    "redis[hiredis]>=7.1.1",
    "rtoml>=0.13.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "starlette-context>=0.4.0",
    "user-agents>=2.2.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2"]
lint = ["prek>=0.3.2", "ruff>=0.15.1"]

[tool.uv]
package = false
python-downloads = "manual"
default-groups = ["dev"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "backend/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
