[project]
name = "fastapi-service"
description = "基于 FastAPI, SQLAlchemy 的服务框架"
readme = "README.md"
dynamic = ["version"]
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.18.4",
  "asgiref>=3.11.1",
  "asyncpg>=0.31.0",
  "cryptography>=46.0.5",
  "fastapi==0.135.3",
  "fastapi-pagination>=0.15.11",
  "granian[reload]>=2.7.2",
  "loguru>=0.7.3",
  "pwdlib[bcrypt]>=0.3.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "pyrate-limiter>=4.1.0",
  "python-dateutil>=2.9.0.post0",
  "python-jose>=3.5.0",
  "redis[hiredis]>=7.4.0",
  "rtoml>=0.13.0",
  "sqlalchemy[asyncio]>=2.0.48",
  "starlette-context>=0.5.1",
  "user-agents>=2.2.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2"]
lint = ["commitizen>=4.13.9", "prek>=0.3.8", "ruff>=0.15.7"]

[tool.uv]
package = false
python-downloads = "manual"
default-groups = ["dev", "lint"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "backend/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
